# ai_powered_qna_assistant

./: README.md  catalog.json  main.py  pyproject.toml
data/: annotation.json
data/dataframes/: B2B_sellin_client.csv  B2B_sellin_fato.csv  B2B_sellin_product.csv  B2B_sellin_product.csv.backup  B2B_stockout.csv  B2B_weather.csv  DTC_cupons.csv  DTC_cupons2.csv  DTC_lovers.csv  DTC_orders.csv  MKT_brand_power.csv  MKT_occasions.csv  MKT_participation.csv  MKT_servings.csv
src/: catalog.py  data_loader.py  llm_client.py  logging_config.py  prompts.py  qa_engine.py
